[package]
name = "payments"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.4"
axum-extra = { version = "0.10.1", features = ["typed-header"] }
bigdecimal = "0.4.8"
chrono = "0.4.41"
dotenv = "0.15.0"
jsonwebtoken = "9.3.1"
reqwest = { version = "0.12.15", features = ["json"] }
serde = "1.0.219"
serde_json = "1.0.140"
sqlx = { version = "0.8.5", features = ["mysql", "chrono", "bigdecimal", "runtime-tokio"] }
tokio = { version = "1.45.0", features = ["rt-multi-thread"] }
